# Callisto

./: .gitignore  README.md  callisto_trace.h  justfile
.github/workflows/: ci.yml
callisto-trace/: Cargo.toml
client/: package.json
client/apps/viewer-electron/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/apps/viewer-electron/electron/: main.ts  preload.ts
client/apps/viewer-electron/src/: App.css  App.tsx  index.css
client/apps/viewer-electron/src/components/: CpuChart.tsx  Timeline.tsx  Toolbar.tsx
client/apps/viewer-electron/src/services/: WebSocketManager.ts
client/shared/types/: package.json  tsconfig.json
client/shared/types/src/: index.ts
device/rust/callisto-trace/src/: lib.rs
docs/: architecture.md  dev-workflow.md  device-discovery.md  protocol.md
server/: Cargo.toml
server/cli/: Cargo.toml
server/cli/src/: main.rs
server/core/: Cargo.toml
server/core/src/: decoder.rs  itm.rs  lib.rs  mock.rs  probe.rs
server/protocol/: Cargo.toml
server/protocol/src/: lib.rs
