[package]
name = "callisto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
callisto-protocol = { path = "../protocol" }

# Probe-rs for hardware interface
probe-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Collections and data structures
crossbeam-channel = "0.5"