[package]
name = "callisto-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "generate-schemas"
path = "src/bin/generate_schemas.rs"